lab1/Test/L1-A-12-38.output
Error Type B at Line 13
Error Type B at Line 17
Error Type B at Line 18
Error Type A at Line 21
Error Type A at Line 30
Error Type A at Line 37
Error Type B at Line 38
