lab1/Test/L1-A-12-38.cmm
struct yxF5iaRAWvDK6FfqqC8 ;
int ;
int M , wt4tijMugPogz02zTI3 

;
struct {
}MHdX0ohbWQwjHK ( float LCpkzbAEfEhR7 ) {
  int QgEBynur2eo4O [ 1787221809 ] , M_JZmLbJ4HCK 
    = yuW33SU = m6v4PkN9U8o7oLLPM > CJdLllKLoLHd7sEPsO7 
    * - ! - sxmS1G [ LGwMDDMBujbrq78oa7 || R74gnGwK1nHo4xJV 
    && FG0s25wf != FrCj2cvRR3 + IdKoIwBUaDHrnpEsyN / ( 
    L_03QruVTP35Q < - ! xaUCX9N9cSPxCXXI ( CCgnVgZGmu6cJUI_H 
    >= sPFW8xeDCEuXfu0 <= == ! - 1619372192 . fcVl8NBv2_DM6U 
    , ! DYlt ) ) ] . mcwZCUaLzBd - ! zU7CkLBSV ( ) ;
}
int 
int ;
int ( int hY8IuGVwzaJD , int g6vRMimbVR ) {
}
int G ( ) {
  FPXX1FVvIaZXoWrRf_ ;`
  if ( o1wb5Kqgr )   oobe1YQkN3l0NL6re ;
else   if ( G )   qg8Nc3wpYMH ;
else   if ( l2kz )   if ( w3PUB )   t ;
else {
  }



  if ( LTJJR7mAoK4g1HJIE6 )   while #( qwdGdu5j ) 
      return IoYARjpw ;


}
int Ow7dIHVpOZ9uafeieO7 ( ) {
  int bKbY ;
  int zC5u ;&
  struct wme35DBrtSQb }RahiUKCKG9 ;
bpUomYkkxiC0hdSJd2z ;
}
